# botscrum

./: .env.example  .gitignore  CLAUDE.md  Idee.md  LOCAL-LLM-WITH-CLAUDE.md  README.md  litellm-config.yaml  lmstudio-claude.sh  ollama-claude.sh  pyproject.toml  start-litellm.sh
.claude/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
src/botscrum/: auth.py  chunker.py  cli.py  config.py  mcp_server.py  query.py  store.py
src/botscrum/ingest/: files.py  web.py
